Rename the project

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "dooboo",
+  "name": "nwd",
   "version": "0.0.1",
   "description": "boilerplate for react-native by dooboolab!",
-  "author": "hyochan <dooboolab@gmail.com>",
   "private": true,
   "postinstall": "npx jetify",
   "scripts": {
