--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-web": "^0.15.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "^4.0.3",
+    "recoil": "^0.1.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -78,6 +79,7 @@
     "@types/react-native": "^0.63.51",
     "@types/react-responsive": "^8.0.2",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/recoil": "^0.0.1",
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^26.6.3",
