--- a/package.json
+++ b/package.json
@@ -87,6 +87,11 @@
     "babel-preset-react-native": "^4.0.1",
     "codecov": "^3.8.1",
     "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "fb-tiger-hash": "^0.1.6",
     "fbt-generate-translations": "^0.0.4",
     "jest-fetch-mock": "^3.0.3",
