--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "fbt": "^0.16.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-elements": "^3.3.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "^4.0.3",
