--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "prettier": "^2.2.1",
     "react-dom": "^16.13.1",
     "react-native-fbt": "^0.0.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
     "ts-jest": "^26.5.3",
     "typescript": "4.2.3"
